Fixed project box height on mobile screen

--- a/src/styles/layout/_projects.scss
+++ b/src/styles/layout/_projects.scss
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     min-height: 300px;
+    max-height: 350px;
     // justify-content: center;
     margin: 0.5rem 0rem;
     &-img {
@@ -104,6 +105,7 @@
   //   width: ;
   // }
   .projects__box {
+    max-height: none;
     &-text {
       font-size: 1.3rem;
     }
