--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -227,6 +227,7 @@ h3 {
   display: flex;
   flex-direction: column;
   min-height: 300px;
+  max-height: 350px;
   margin: 0.5rem 0rem;
 }
 .projects__box-img {
@@ -298,6 +299,9 @@ h3 {
     grid-template-columns: repeat(3, 30%);
   }
 
+  .projects__box {
+    max-height: none;
+  }
   .projects__box-text {
     font-size: 1.3rem;
   }
